--- a/src/main/resources/templates/articles.html
+++ b/src/main/resources/templates/articles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" th:href="@{/css/companydashboard.css}">
+  <head th:replace="fragment/admin-head.html :: head"></head>
 </head>
 <body>
 
