--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -48,7 +48,7 @@
 				<div class="register-row">
 					<input class="register_input" type="email" placeholder="Company Email" name="email"
 						th:field="*{email}">
-					<input class="register_input" type="number" placeholder="Company Number" name="phnum"
+					<input class="register_input" type="number" placeholder="Company Contact Number" name="phnum"
 						th:field="*{phnum}">
 				</div>
 				<div class="register-row">
