--- a/src/main/resources/templates/fragment/admin-dashboard.html
+++ b/src/main/resources/templates/fragment/admin-dashboard.html
@@ -1,4 +1,5 @@
 <ul th:fragment="dashboard-left">
+  <head th:replace="fragment/admin-head.html :: head"></head>
     <li><a th:href="@{/admin/admindashboard}">Dashboard</a></li>
     <li class="dropdown">
       <a href="#" class="dropdown-btn">Users</a>
@@ -23,8 +24,7 @@
         <a th:href="@{/admin/reports}">Reports Table</a>
         <a th:href="@{/admin/companies/statisticsgraph}">Statistics Graph</a>
       </div>
-         <li><a th:href="@{/change_password}">Change Password</a></li>
-         <li><a th:href="@{/logout}">Logout</a></li>
-
+        <li><a th:href="@{/change_password}">Change Password</a></li>
+        <li><a th:href="@{/logout}">Logout</a></li>
     </li>
   </ul>
