--- a/src/main/resources/static/css/details.css
+++ b/src/main/resources/static/css/details.css
@@ -97,13 +97,13 @@
 }
 
 .dropdown{
-  background:#efefef;
-  padding: 10px;
-  width: 17rem;
-  margin-top:5px;
-  position: absolute;
-  z-index: 99;
-
+    background:#efefef;
+    padding: 10px;
+    width: 17rem;
+    margin-top:5px;
+    position: absolute;
+    z-index: 99;
+    cursor: pointer;
 }
 
 .dropdown-content{
