--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -6,7 +6,7 @@
 			<li><a href="/" class="link">Home</a></li>
 			<li><a th:href="@{/user/myinvestment}" class="link">My Investment</a></li>
 			<li><a th:href="@{/companyregister}" class="link">Raise Capital</a></li>
-			<li><a th:href="@{/company}" class="link">Company</a></li>
+			<li><a th:href="@{/user/company}" class="link">Company</a></li>
 			<li><a href="#" class="link">Learn</a></li>
 		</ul>
 	</div>
