style.css diverficationgraph.css made comment

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,7 +15,7 @@
 @import url('./my_information.css');
 @import url('./load_fund.css');
 @import url('./user_profile.css');
-@import url('./diversificationgraph.css');
+/* @import url('./diversificationgraph.css'); */
 /* @import url('./viewpage.css');
 @import url('./admindashboard.css'); */
 
