saving company file , uploading and  displaying file based on company id from file system

--- a/src/main/resources/templates/company-reports.html
+++ b/src/main/resources/templates/company-reports.html
@@ -12,14 +12,14 @@
         <div th:replace="fragment/company-dashboard.html :: sidebar"></div>
         <div class="investment-details">
             <!-- <h1>Investment Details</h1> -->
-            <form th:action="@{/company/overview}" method="POST" class="chart-container">
+            <form th:action="@{/company/report}" method="POST" class="chart-container" enctype="multipart/form-data">
                 <div class="input-field" >
                     <input type="text" name="title" id="title" placeholder="Title" />
                 </div>
                 <div class="input-field">
                     <label for="audit_report" class="input-label">
                         <input type="file" class="file-input" name="audit_report" id="audit-report"/>
-                        <span for="audit_report" class="help-text">Upload your audit report</span>
+                        <span for ="audit_report" class="help-text">Upload your audit report</span>
                     </label>
                     <span id="file-name" class="file-name">No file selected</span>
                 </div>
