--- a/src/main/resources/templates/fragment/dashboard.html
+++ b/src/main/resources/templates/fragment/dashboard.html
@@ -44,7 +44,7 @@
 
             <div class="collateral__summary board">
                 <h2 class="">MY COLLATERAL SUMMARY</h2>
-                <h3 class="bold">Rs. <span id="amount"></span></h3>
+                <!-- <h3 class="bold">Rs. <span id="amount"></span></h3> -->
 
                 <div>
                     <p>Collateral balance</p>
