--- a/src/main/resources/templates/load_fund.html
+++ b/src/main/resources/templates/load_fund.html
@@ -51,7 +51,7 @@
                             required>
                     </div>
                     <input type="hidden" id="company-id" name="companyId" value=0>
-                   
+                   <div></div>
                     <div>
                         <input type="button" class="btn btn-primary" id="payment-button" value="continue"></input>
                         <button type="reset" class="btn">Reset</button>
