fixed urls and paths

--- a/src/main/resources/static/css/admindashboard.css
+++ b/src/main/resources/static/css/admindashboard.css
@@ -67,10 +67,14 @@ body, ul {
   justify-content: space-between;
   cursor: pointer;
 }
+/* .dropdown{
+  display: flex;
+  flex-direction: column;
+} */
 
 .dropdown-content a {
   display: block;
-  padding: 10px;
+  padding: 5px 10px;
 }
 .dropdown-content {
   display: none;
@@ -95,7 +99,6 @@ body, ul {
 /* Content area styles */
 .content {
   padding: 20px;
- 
 }
 
 /* Show dropdown content on hover */
@@ -103,4 +106,28 @@ body, ul {
   display: block;
 }
 
-        
+.button{
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.positive{
+  background-color: #2ecc71;
+  color: #fff;
+}
+.negative{
+  background-color: #e74c3c;
+  color: #fff;
+}
+
+.positive:hover{
+  background-color: #27ae60;
+}
+
+.negative:hover{
+  background-color: #c0392b;
+}
+
