--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -43,7 +43,7 @@
                             </div>
                     </div>
 
-                    <div class="dropdown">
+                    <div class="payment-dropdown">
                         <div id="payment-error-message" th:if="${message}">
                             Transaction [[${message}]] !
                         </div>
