--- a/src/main/resources/templates/fragment/company-dashboard.html
+++ b/src/main/resources/templates/fragment/company-dashboard.html
@@ -1,4 +1,5 @@
 <div class="sidebar" th:fragment="sidebar">
+    <script th:src="@{/js/dropdown.js}"></script>
     <h1>Dashboard</h1>
     <ul>
         <li><a th:href="@{/company/companydashboard}" class="active">Dashboard</a></li>
@@ -10,6 +11,12 @@
         <li><a href="#">Financial Performance</a></li>
         <li><a href="#">Documents and Reports</a></li>
         <li><a th:href="@{/company/notification}">Notification<sup th:if="${unread}">[[${unread}]]</sup></a></li>
-        <li><a th:href="@{/logout}">Setting and Account Management</a></li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-btn" style="margin-bottom:10px;">Accounts</a>
+            <div class="dropdown-content">
+                <a th:href="@{/change_password}">Change Password</a>
+                <a th:href="@{/logout}">Logout</a>
+            </div>
+        </li>
     </ul>
 </div>
