--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -13,7 +13,7 @@
     <section>
         <div class="container login__container">
             <div class="login__left">
-                <img th:src="@{'/photos/register.png'}" alt="image" />
+                <img th:src="@{'/images/sanolagani logo.png'}" alt="image" />
             </div>
             <div class="login__right">
                 <!--<span id="error-msg"></span> --> 
