--- a/src/main/resources/templates/admindashboard.html
+++ b/src/main/resources/templates/admindashboard.html
@@ -11,7 +11,7 @@
 
   <div class="dashboard">
     <div class="sidebar">
-      <h2>Dashboard</h2>
+      <h2>Admin</h2>
       <ul th:insert="fragment/admin-dashboard.html :: dashboard-left"></ul>
     </div>
 
