--- a/src/main/resources/templates/viewuser.html
+++ b/src/main/resources/templates/viewuser.html
@@ -12,7 +12,7 @@
 <body>
   <div class="dashboard">
     <div class="sidebar">
-      <h2>Dashboard</h2>
+      <h2>Admin</h2>
       <ul th:insert="fragment/admin-dashboard.html :: dashboard-left"></ul>
     </div>
     
